--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <body>
     <header>
       <h1>
-        Overlapping Page
+        Overlapping Page by
+        <a href="https://www.linkedin.com/in/inesbernardino/">Inês</a>
       </h1>
     </header>
 
