--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <header>
       <h1>
         Overlapping Page by
-        <a href="https://www.linkedin.com/in/inesbernardino/">Inês</a>
+        <a href="https://www.linkedin.com/in/inesbernardino/"
+          >Inês Bernardino</a
+        >
       </h1>
     </header>
 
